<resources>
    <string name="app_name">asistente</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="remember">Do you want to keep this user logged in next time?</string>
    <string name="username">Username</string>
    <string name="surnames">Surnames</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_keep">Keep logged!</string>
    <string name="login_keep_long">Do you want to  sogin directly with this user the next time you open the app? (You can change this later in settings)</string>
    <string name="login_yes">Yes! Keep me logged in</string>
    <string name="no_thanks">No, thanks</string>
    <string name="login_wrong">Wrong email or password</string>
    <string name="pass_different">Passwords are different</string>
    <string name="email_registered">This email is already registered</string>
    <string name="start_task">Start a task</string>
    <string name="task_list">My task list</string>
    <string name="title_activity_tabbed_task_lists">TabbedTaskListsActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="apply_filter">Apply filter</string>
    <string name="taskname">Task name</string>
    <string name="task_desc">Description</string>
    <string name="task_start_date">Start date</string>
    <string name="task_finish_date">Finish date</string>
    <string name="task_search">Search task by name</string>
    <string name="newTask">New task</string>
    <string name="task_priority">Priority</string>
    <string name="task_create">Create task</string>
    <string name="cancel">Cancel</string>
    <string name="task_created">Task added to your list</string>
    <string name="error">Something went wrong, try again</string>
    <string name="task_finished">Finish task</string>
    <string name="start_task_question">Do you want to start this task?</string>
    <string name="start">Start!</string>
    <string name="not_now">Not now</string>
    <string name="dont_use_phone">You can\'t use your phone until you finish your task. Whem it\'s done click on the \"FINISH TASK\" button</string>
    <string name="message_1">WORK!!</string>
    <string name="btn_message_1">Ok...</string>
    <string name="message_2">Don\'t touch me…</string>
    <string name="btn_message_2">Oh, sorry...</string>
    <string name="message_3">I\'m not paying you to be on the phone</string>
    <string name="btn_message_3">I\'m sorry boss!</string>
    <string name="message_4">Don\'t you dare...</string>
    <string name="btn_message_4">...</string>
    <string name="message_5">Do that again.... Next time I won\'t be that kind...</string>
    <string name="btn_message_5">(*glup*)</string>
    <string name="finish_congrats">Well done! You\'ve finished a task!</string>
    <string name="logout">Log out</string>
</resources>